# talent-graph-analyzer

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  PR_TEMPLATE.md  README.md  REFACTORING_COMPLETE.md  app.py  config.yaml  config_loader.py  gnn_models.py  gnn_talent_analyzer.py  pyproject.toml  requirements.txt  run.py  setup.py  streamlit_app.py  test_refactored_code.py  utils.py
.github/workflows/: ci.yml
causal_inference/: __init__.py  causal_forest.py  cluster_robust.py  did_analysis.py  exceptions.py  psm_diagnostics.py  sensitivity_analysis.py  types.py  utils.py  validators.py
config/: .env.example  config.yaml
docs/: ADVANCED_CAUSAL_INFERENCE_GUIDE.md  CHANGELOG.md  CODE_REVIEW_REPORT.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  REFACTORING.md  REFACTORING_GUIDE.md  REFACTORING_GUIDE_V2.md  REFACTORING_SUMMARY.md
model_evaluation/: __init__.py  baseline_models.py  cross_validation.py  performance_metrics.py
requirements/: base.txt  causal.txt  dev.txt  ml.txt  streamlit.txt  viz.txt
src/: __init__.py
src/talent_analyzer/: __init__.py
src/talent_analyzer/config/: __init__.py  constants.py  loader.py
src/talent_analyzer/core/: __init__.py  analyzer.py  gnn_models.py
src/talent_analyzer/ui/: __init__.py  app.py
src/talent_analyzer/utils/: __init__.py  helpers.py
tests/: __init__.py  conftest.py  test_sensitivity_analysis.py  test_validators.py
visualization/: __init__.py  calibration_plot.py  did_plots.py  love_plot.py
